Desenvolvido tela de login

--- a/Breshop/Breshop.csproj
+++ b/Breshop/Breshop.csproj
@@ -51,6 +51,9 @@
     <Content Update="Views\Produto\Calcado.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Usuario\Login.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
