--- a/Breshop/Breshop.csproj
+++ b/Breshop/Breshop.csproj
@@ -33,16 +33,10 @@
     <Content Update="Views\Produto\Index.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Views\Produto\Ofertas.cshtml">
-      <Pack>$(IncludeRazorContentInPack)</Pack>
-    </Content>
-    <Content Update="Views\Produto\Relogio.cshtml">
+    <Content Update="Views\Produto\Acessorio.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Produto\Masculino.cshtml">
-      <Pack>$(IncludeRazorContentInPack)</Pack>
-    </Content>
-    <Content Update="Views\Produto\Infantil.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Produto\Feminino.cshtml">
